notify-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-service-mysql
  labels:
    app: notify-service-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notify-service-mysql
  template:
    metadata:
      labels:
        app: notify-service-mysql
    spec:
      volumes:
        - name: mysql-volume
          hostPath:
            path: /home/fedgen/storage/mysql/notification-db/
            type: Directory
      containers:
        - name: web
          image: fedgen/notification:prod
          imagePullPolicy: Always
          command: ['/bin/bash']
          args: ['-c','python manage.py migrate; gunicorn -w 4 notification.wsgi -b 0.0.0.0:80']
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: mysql-volume
              mountPath: /app/db
        - name: mysql
          image: mysql:5.7
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mysql-volume
              mountPath: /var/lib/mysql/
