notify-service-mysql-ml-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: notify-service-mysql
spec:
  selector:
    app: notify-service-mysql
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: notify-service-ingress-secure
spec:
  entryPoints:
    - websecure
  routes:
  - match: Path(`/notify/{[aA-zZ]+}`)
    kind: Rule
    services:
    - name: notify-service-mysql
      port: 80
  tls:
    secretName: fedgen-ml-tls
